[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/house/wallpaper/pastoral_wallpaper.png" type="Texture" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/house/living_room.png" type="Texture" id=5]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/20.0 House/LivingRoom.gd" type="Script" id=7]
[ext_resource path="res://Furniture/Furniture.tscn" type="PackedScene" id=8]

[node name="LivingRoom" type="Node2D"]
script = ExtResource( 7 )

[node name="living_room" type="Sprite" parent="."]
position = Vector2( 859.484, 614.792 )
texture = ExtResource( 5 )

[node name="BG" parent="." instance=ExtResource( 4 )]
margin_left = -436.275
margin_top = -600.499
margin_right = 2385.73
margin_bottom = 1504.51

[node name="pastoral_wallpaper2" type="Sprite" parent="BG"]
position = Vector2( 2095.53, 838.113 )
scale = Vector2( 1.09426, 1 )
texture = ExtResource( 1 )

[node name="pastoral_wallpaper" type="Sprite" parent="BG"]
position = Vector2( 1170.98, 721.664 )
scale = Vector2( 1.10044, 1 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="BG"]
margin_left = 1890.0
margin_top = 588.0
margin_right = 2744.0
margin_bottom = 1545.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YSort" type="YSort" parent="."]

[node name="Furniture" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 885.667, 775.851 )

[node name="player" parent="YSort" instance=ExtResource( 2 )]
position = Vector2( 877.928, 1169.94 )

[node name="EntrySP" parent="." instance=ExtResource( 3 )]
position = Vector2( 875.778, 1228.91 )

[node name="StairsSP" parent="." instance=ExtResource( 3 )]
position = Vector2( 1313.67, 586.207 )

[node name="PuppyCamera" parent="." instance=ExtResource( 6 )]

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -392.627, -570.889 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 2355.4, 1473.05 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 746.767, 1338.51, 744.413, 1246.7, 285.335, 1258.47, 259.438, 382.692, 529.991, 388.542, 954.41, 383.692, 1182.3, 366.213, 1187.01, 519.238, 1248.22, 516.884, 1255.28, 328.545, 1387.12, 326.19, 1389.48, 519.238, 1443.62, 514.53, 1445.98, 1237.28, 1008.09, 1241.99, 1008.09, 1338.51, 1674.34, 1331.45, 1662.57, 177.873, 82.8702, 177.873, 108.767, 1333.81 )

[editable path="PuppyCamera"]
